--- a/Down To Discuss/Info.plist
+++ b/Down To Discuss/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This information is required to show your current location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This information is required to show your current location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This information is required to show your current location</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
